color management: refactor and move to its own directory

The pipeline stages are also now properly managed, which should prevent
use-after-free errors.

BUG: 453026