src/colors/colorlut.cpp
@@ -6,34 +6,12 @@
 
     SPDX-License-Identifier: GPL-2.0-or-later
 */
-#include "colors.h"
+#include "colorlut.h"
 
-#include <lcms2.h>
+#include "colortransformation.h"
 
 namespace KWin
 {
-
-ColorTransformation::ColorTransformation(cmsPipeline *pipeline)
-    : m_pipeline(pipeline)
-{
-}
-
-ColorTransformation::~ColorTransformation()
-{
-    cmsStage *last = nullptr;
-    do {
-        cmsPipelineUnlinkStage(m_pipeline, cmsAT_END, &last);
-    } while (last);
-    cmsPipelineFree(m_pipeline);
-}
-
-std::tuple<uint16_t, uint16_t, uint16_t> ColorTransformation::transform(uint16_t r, uint16_t g, uint16_t b) const
-{
-    const uint16_t in[3] = {r, g, b};
-    uint16_t out[3] = {0, 0, 0};
-    cmsPipelineEval16(in, out, m_pipeline);
-    return {out[0], out[1], out[2]};
-}
 
 ColorLUT::ColorLUT(const QSharedPointer<ColorTransformation> &transformation, size_t size)
     : m_transformation(transformation)
