src/colors/colortransformation.h
@@ -1,0 +1,41 @@
+/*
+    KWin - the KDE window manager
+    This file is part of the KDE project.
+
+    SPDX-FileCopyrightText: 2022 Xaver Hugl <xaver.hugl@gmail.com>
+
+    SPDX-License-Identifier: GPL-2.0-or-later
+*/
+#pragma once
+
+#include <QSharedPointer>
+#include <QVector>
+#include <stdint.h>
+#include <tuple>
+
+#include "kwin_export.h"
+
+typedef struct _cmsPipeline_struct cmsPipeline;
+
+namespace KWin
+{
+
+class ColorPipelineStage;
+
+class KWIN_EXPORT ColorTransformation
+{
+public:
+    ColorTransformation(const QVector<QSharedPointer<ColorPipelineStage>> &stages);
+    ~ColorTransformation();
+
+    bool valid() const;
+
+    std::tuple<uint16_t, uint16_t, uint16_t> transform(uint16_t r, uint16_t g, uint16_t b) const;
+
+private:
+    cmsPipeline *const m_pipeline;
+    QVector<QSharedPointer<ColorPipelineStage>> m_stages;
+    bool m_valid = true;
+};
+
+}
